--- a/image-galery-stage0/styles/style.css
+++ b/image-galery-stage0/styles/style.css
@@ -12,3 +12,164 @@
 html {
 	scroll-behavior: smooth;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100px;
+  background-color: rgb(197, 81, 81);
+}
+
+.header-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-left: 25px;
+}
+
+.favicon {
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+}
+
+.title {
+  display: block;
+  text-align: center;
+  font-family: Inter, sans-serif;
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  color: #ffffff;
+}
+
+.header-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-right: 25px;
+}
+
+#search-input {
+  display: flex;
+  width: 400px;
+  height: 40px;
+  padding: 20px;
+  border: 3px solid #df8181;
+  border-radius: 30px;
+  text-align: start;
+  font-family: Inter, sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  background-color: #ffffff;
+  color: #e05757;
+  outline: none;
+}
+
+#search-input::-webkit-input-placeholder {
+  color: #df8181;
+}
+
+#search-input::-moz-placeholder {
+  color: #df8181;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: rgb(197, 81, 81);
+}
+
+.rss-logo {
+  display: block;
+  width: 150px;
+  height: 50px;
+  margin-left: 20px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.rss-logo:hover {
+  width: 180px;
+  height: 60px;
+  transition: 0.5s;
+}
+
+.rss-logo:active {
+  width: 162px;
+  height: 54px;
+  transition: 0.5s;
+}
+
+.year {
+  margin-right: 90px;
+  text-align: center;
+  font-family: Inter, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: #000000;
+}
+
+.gh-logo {
+  display: block;
+  width: 60px;
+  height: 60px;
+  margin-right: 20px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.gh-logo:hover {
+  width: 72px;
+  height: 72px;
+  transition: 0.5s;
+}
+
+.gh-logo:active {
+  width: 64.8px;
+  height: 64.8px;
+  transition: 0.5s;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: rgb(218, 186, 219);
+}
+
+.image-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 1500px;
+  height: 763px;
+}
+
+.image {
+  display: block;
+  width: 500px;
+  height: 300px;
+  border: 5px solid rgb(197, 81, 81);
+  border-radius: 25px;
+  box-shadow: 0 0 20px 5px #000000;
+  transition: 0.5s;
+}
+
+.image:hover {
+  width: 550px;
+  height: 330px;
+  transition: 0.5s;
+}
