--- a/image-galery-stage0/styles/style.css
+++ b/image-galery-stage0/styles/style.css
@@ -13,12 +13,18 @@ html {
 	scroll-behavior: smooth;
 }
 
+body {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 header {
   display: flex;
   justify-content: space-between;
   width: 100%;
   height: 100px;
   background-color: rgb(197, 81, 81);
+  transition: 0.5s;
 }
 
 .header-left {
@@ -48,6 +54,7 @@ header {
 
 .header-right {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -58,7 +65,7 @@ header {
   display: flex;
   width: 400px;
   height: 40px;
-  padding: 20px;
+  padding: 15px 70px 15px 15px;
   border: 3px solid #df8181;
   border-radius: 30px;
   text-align: start;
@@ -79,6 +86,110 @@ header {
   color: #df8181;
 }
 
+#delete-button {
+  display: none;
+  position: absolute;
+  right: 50px;
+  width: 20px;
+  height: 20px;
+  opacity: 1;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+#delete-button:hover {
+  opacity: 0.75;
+  transition: 0.5s;
+}
+
+#search-button {
+  display: block;
+  position: absolute;
+  right: 15px;
+  width: 25px;
+  height: 25px;
+  opacity: 1;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+#search-button:hover {
+  opacity: 0.75;
+  transition: 0.5s;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: calc(100vh - 200px);
+  background-color: rgb(218, 186, 219);
+  transition: 0.5s;
+}
+
+.image-box {
+  display: none;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 1500px;
+  height: 763px;
+}
+
+.image {
+  display: block;
+  width: 500px;
+  height: 300px;
+  border: 5px solid rgb(197, 81, 81);
+  border-radius: 25px;
+  box-shadow: 0 0 20px 5px #000000;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.image:hover {
+  width: 550px;
+  height: 330px;
+  transition: 0.5s;
+}
+
+.image-open {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: calc(80vh * 1.667);
+  height: 80vh;
+  margin: -40vh 0 0 calc(-80vh * 1.667 / 2);
+  border: 5px solid rgb(197, 81, 81);
+  border-radius: 25px;
+  box-shadow: 0 0 20px 5px #000000;
+}
+
+.black {
+  filter: brightness(25%);
+}
+
+#error-icon {
+  display: none;
+  width: 400px;
+  height: 150px;
+  margin-bottom: 50px;
+}
+
+.error {
+  display: none;
+  width: 80%;
+  text-align: center;
+  font-family: Inter, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  color: #4b4b4b;
+}
+
 footer {
   display: flex;
   align-items: center;
@@ -87,6 +198,7 @@ footer {
   width: 100%;
   height: 100px;
   background-color: rgb(197, 81, 81);
+  transition: 0.5s;
 }
 
 .rss-logo {
@@ -99,14 +211,7 @@ footer {
 }
 
 .rss-logo:hover {
-  width: 180px;
-  height: 60px;
-  transition: 0.5s;
-}
-
-.rss-logo:active {
-  width: 162px;
-  height: 54px;
+  padding: 5px;
   transition: 0.5s;
 }
 
@@ -129,47 +234,6 @@ footer {
 }
 
 .gh-logo:hover {
-  width: 72px;
-  height: 72px;
-  transition: 0.5s;
-}
-
-.gh-logo:active {
-  width: 64.8px;
-  height: 64.8px;
-  transition: 0.5s;
-}
-
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  background-color: rgb(218, 186, 219);
-}
-
-.image-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 1500px;
-  height: 763px;
-}
-
-.image {
-  display: block;
-  width: 500px;
-  height: 300px;
-  border: 5px solid rgb(197, 81, 81);
-  border-radius: 25px;
-  box-shadow: 0 0 20px 5px #000000;
-  transition: 0.5s;
-}
-
-.image:hover {
-  width: 550px;
-  height: 330px;
+  padding: 5px;
   transition: 0.5s;
 }
