--- a/random-game-stage0/styles/style.css
+++ b/random-game-stage0/styles/style.css
@@ -55,7 +55,7 @@ body {
 
 
 .page-menu {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -142,7 +142,7 @@ body {
 
 
 .page-game {
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -150,6 +150,10 @@ body {
   height: 680px;
   border-radius: 15px;
   border: 5px solid rgb(201, 250, 182);
+}
+
+canvas {
+  border-radius: 9px;
 }
 
 
